# OpenCVLearning

./: CMakeLists.txt  OpenCVLearning.sln  OpenCVLearning.vcxproj  OpenCVLearning.vcxproj.filters  main.cpp
OpenCVDemo/: CMakeLists.txt  OpenCVGUI.cpp  OpenCVGUI.h  unistd.h
cvTest/5/: test.yaml
include/opencv2/: opencv_modules.hpp
lib/: opencv_img_hash420.lib  opencv_world420.lib
main/: main.cpp
main/algorithm/: OpencvGUI.cpp  OpencvGUI.h
